--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
+  "name": "posq-backend",
+  "version": "1.0.0",
+  "description": "POSQ Backend on Railway (Node.js + Prisma)",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.js",
+    "postinstall": "prisma generate"
+  },
   "dependencies": {
-    "dfx": "^0.127.0",
-    "pnpm": "^10.26.2"
+    "@prisma/client": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "nodemon": "^2.0.22",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
